--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,23 +1,23 @@
-name: Deploy to GitHub Pages
+name: Build and deploy to GitHub Pages
+
 on:
   push:
-    branches: ['main']
-permissions:
-  contents: write
-  pages: write
-  id-token: write
+    branches: [main]
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Build
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2.3.1
+
+      - name: Install and build 🔧
         run: |
-          npm install         
+          npm install
           npm run build
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.6.3
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
-          folder: dist
           branch: gh-pages
+          folder: dist
